# Honey

./: .gitignore  .gitmodules  CMakeLists.txt  premake5.lua
application/: CMakeLists.txt
application/assets/shaders/: flat_color.glsl  texture.glsl
application/src/: application.cpp  application_2d.cpp  application_2d.h  application_3d.cpp  application_3d.h  examples.h
assets/shaders/: texture.glsl  texture_m1.glsl
cmake/: VendorDotnet.cmake
engine/: CMakeLists.txt
engine/src/: Honey.h  hnpch.h  window.h
engine/src/Core/: core.h  engine.h  entry_point.h
engine/src/Honey/: camera_controller.cpp  camera_controller.h  core.h  engine.cpp  engine.h  entry_point.h  keycodes.h  layer.cpp  layer.h  layer_stack.cpp  layer_stack.h  log.cpp  log.h
engine/src/Honey/audio/: audio_system.cpp  audio_system.h
engine/src/Honey/core/: base.h  core.h  engine.cpp  engine.h  entry_point.h  input.h  keycodes.h  layer.h  layer_stack.cpp  layer_stack.h  log.h  mouse_button_codes.h  settings.cpp  settings.h  statistics.cpp  statistics.h  task_system.cpp  task_system.h  timer.h  timestep.h  uuid.cpp  uuid.h
engine/src/Honey/debug/: instrumentor.h
engine/src/Honey/events/: application_event.h  event.h  key_event.h  mouse_event.h
engine/src/Honey/imgui/: imgui_build.cpp  imgui_layer.cpp  imgui_layer.h  imgui_renderer.cpp  imgui_renderer.h
engine/src/Honey/loaders/: gltf_loader.cpp  gltf_loader.h  gltf_scene_tree.h
engine/src/Honey/math/: math.cpp  math.h  yaml_glm.h
engine/src/Honey/physics/: jolt_contact_listener.cpp  jolt_contact_listener.h  jolt_debug_renderer.cpp  jolt_debug_renderer.h  jolt_job_system.cpp  jolt_job_system.h  physics_engine_3d.cpp  physics_engine_3d.h
engine/src/Honey/renderer/: Pipeline.h  buffer.cpp  buffer.h  camera.cpp  camera.h  editor_camera.cpp  editor_camera.h  frame_graph.cpp  frame_graph.h  frame_graph_descriptor_plan.h  frame_graph_loader.cpp  frame_graph_loader.h  frame_graph_registry.cpp  frame_graph_registry.h  framebuffer.cpp  framebuffer.h  global_bindings.h  gpu_types.h  graphics_context.h  material.h  mesh.cpp  mesh.h  pipeline.cpp  pipeline.h  pipeline_spec.cpp  pipeline_spec.h  render_command.cpp  render_command.h  renderer.cpp  renderer.h  renderer_2d.cpp  renderer_2d.h  renderer_3d.cpp  renderer_3d.h  renderer_api.cpp  renderer_api.h  scene_viewport_renderer.cpp  scene_viewport_renderer.h  shader.cpp  shader.h  (+19 more)
engine/src/Honey/renderer/renderer_3d/: debug_renderer_3d.cpp  debug_renderer_3d.h  renderer_3d.cpp  renderer_3d.h  renderer_3d_deferred.cpp  renderer_3d_forward.cpp  renderer_3d_geometry.cpp  renderer_3d_internal.h  renderer_3d_meshlet.cpp  renderer_3d_pathtracer.cpp  renderer_3d_pathtracer.h  renderer_3d_shadow.cpp  renderer_3d_shadow.h  renderer_3d_ssao.cpp  renderer_3d_ssao.h
engine/src/Honey/scene/: cloth_system.cpp  cloth_system.h  components.cpp  components.h  entity.cpp  entity.h  scene.cpp  scene.h  scene_serializer.cpp  scene_serializer.h  script_registry.h  scriptable_entity.h
engine/src/Honey/scripting/: csharp_script_engine.cpp  csharp_script_engine.h  csharp_script_glue.cpp  dotnet_host.cpp  dotnet_host.h  mono_script_engine.cpp  mono_script_engine.h  mono_script_glue.cpp  mono_script_glue.h  mono_script_utils.h  script_engine.cpp  script_engine.h  script_glue.cpp  script_glue.h  script_properties_loader.cpp  script_properties_loader.h  script_properties_writer.cpp  script_properties_writer.h  type_proxies.h
engine/src/Honey/scripting/csharp/: csharp_script_engine.cpp  csharp_script_glue.h  dotnet_host.cpp
engine/src/Honey/ui/: imgui_utils.h  notifications.cpp  notifications.h
engine/src/Honey/utils/: gltf_loader.cpp  platform_utils.h
engine/src/platform/linux/: linux_input.cpp  linux_input.h  linux_platform_utils.cpp  linux_window.cpp  linux_window.h
engine/src/platform/macos/: macos_file_dialog_bridge.mm  macos_input.cpp  macos_input.h  macos_platform_utils.cpp  macos_window.cpp  macos_window.h
engine/src/platform/metal/: metal_buffer.h  metal_buffer.mm  metal_context.h  metal_context.mm  metal_framebuffer.h  metal_framebuffer.mm  metal_renderer_api.h  metal_renderer_api.mm  metal_shader.h  metal_shader.mm  metal_texture.h  metal_texture.mm  metal_vertex_array.h  metal_vertex_array.mm
engine/src/platform/opengl/: imgui_impl_opengl3.cpp  opengl_buffer.cpp  opengl_buffer.h  opengl_context.cpp  opengl_context.h  opengl_framebuffer.cpp  opengl_framebuffer.h  opengl_imgui_renderer.cpp  opengl_imgui_renderer.h  opengl_renderer_api.cpp  opengl_renderer_api.h  opengl_shader.cpp  opengl_shader.h  opengl_texture.cpp  opengl_texture.h  opengl_vertex_array.cpp  opengl_vertex_array.h
engine/src/platform/vulkan/: vk_backend.cpp  vk_backend.h  vk_buffer.cpp  vk_buffer.h  vk_cloth_renderer.cpp  vk_cloth_renderer.h  vk_cloth_sim.cpp  vk_cloth_sim.h  vk_context.cpp  vk_context.h  vk_descriptor_heap.cpp  vk_descriptor_heap.h  vk_descriptor_mapping.cpp  vk_descriptor_mapping.h  vk_framebuffer.cpp  vk_framebuffer.h  vk_globals.h  vk_gpu_profiler.cpp  vk_gpu_profiler.h  vk_imgui_renderer.cpp  vk_imgui_renderer.h  vk_pipeline.cpp  vk_pipeline.h  vk_pipeline_cache_blob.cpp  vk_pipeline_cache_blob.h  vk_pipeline_wrapper.h  vk_queue_lease.h  vk_renderer_api.cpp  vk_renderer_api.h  vk_texture.cpp  vk_texture.h  vk_types.h  vk_utils.h  vk_vertex_array.cpp  vk_vertex_array.h
engine/src/platform/windows/: windows_input.cpp  windows_input.h  windows_platform_utils.cpp  windows_window.cpp  windows_window.h
managed/HoneyEngine/: HoneyEngine.csproj
managed/HoneyEngine/src/Components/: Entity.cs  Rigidbody.cs  Transform.cs
managed/HoneyEngine/src/Core/: EntityScript.cs  Input.cs  Log.cs  Scene.cs  ScriptRegistry.cs
managed/HoneyEngine/src/Interop/: InternalCalls.cs  NativeBindings.cs
managed/HoneyEngine/src/Math/: Quaternion.cs  Vector2.cs  Vector3.cs  Vector4.cs
